# vehicle-policy-lapse-prediction

./: .dockerignore  .gitignore  Dockerfile  EDA.md  LICENSE  README.md  app.py  docker-compose.yml  env.md  pyproject.toml  requirements.dev.txt  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci.yml  deploy.yml  foundation.yml  main_vehiclelapse.yml
api-gateway/: Dockerfile  app.py  requirements.txt
api-gateway/templates/: index.html
configs/: api_gateway.yaml  model_service.yaml  training.yaml
docs/: business_overview.md  deployment_guide.md  docker.md  eda.md  eda_summary.md  env.md  roadmap.md  setup_guide.md
infra/applications/: backend.tf  data.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/bootstrap/: main.tf  (+2 more)
model_service/: Dockerfile  app.py  requirements.txt
notebook/: 1_EDA.ipynb  2_Feature_Eng.ipynb  2_Model_Training.ipynb
notebooks/: 01_eda.ipynb  requirements.dev.txt
research/: 02_baseline_modeling.ipynb  03_advanced_modeling.ipynb
scripts/: push_images.sh
shared/: config.py  exception.py  logger.py  paths.py  utils.py
src/: exception.py  utils.py
templates/: home.html
tests/: conftest.py  test_app.py  test_predict_pipeline.py  test_train_pipeline.py
training/: pyproject.toml
training/notebook/: 1_eda.ipynb  2_pre_processing.ipynb  3_model_training.ipynb
training/src/: logger.py  paths.py
training/src/components/: data_ingestion.py  data_transformation.py  feature_selection.py  model_evaluation.py  model_trainer.py
training/src/pipeline/: predict_pipeline.py  train_pipeline.py
(+36 files in other folders)
