[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VehicleLapsePrediction"
version = "0.0.1"
description = "Vehicle lapse prediction package"
authors = [
    { name = "Mak", email = "mohd.amilk09@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "Flask",
    "gunicorn",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "joblib",
    "dill"
]

[tool.setuptools]
packages = { find = {} }